# Tensor-Frame

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  cliff.toml  compose.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  contributing.md  getting-started.md  introduction.md  performance.md
docs/src/api/: README.md  backends.md  operations.md  tensor.md
docs/src/backends/: README.md  cpu.md  cuda.md  wgpu.md
docs/src/examples/: README.md  basic.md  broadcasting.md  custom-backends.md
examples/: backend_demo.rs  backend_selection.rs  basic_operations.rs  broadcasting.rs  new_operations.rs
scripts/: serve-docs.sh  validate-workflows.sh
src/: error.rs  kernels.cu  lib.rs  magic_functions.rs  tensor.rs
src/backend/: cpu.rs  cuda.rs  mod.rs  wgpu.rs
src/gpu_acel/: mod.rs  run.rs  shader_cache.rs
src/gpu_acel/shader_code/: Add.wgsl  Div.wgsl  Mul.wgsl  Sub.wgsl
src/kernels/: math.cu  reduction.cu
src/shaders/: add.wgsl  bmm.wgsl  div.wgsl  exp.wgsl  matmul.wgsl  mul.wgsl  sub.wgsl  tanh.wgsl
src/tensor/: broadcast.rs  dtype.rs  mod.rs  ops.rs  shape.rs
tests/: backend_selection.rs  new_operations.rs
