[package]
name = "tensor_frame"
version = "0.0.3-alpha"
edition = "2024"
authors = ["FizzWizzleDazzle"]
description = "A PyTorch-like tensor library for Rust with CPU, WGPU, and CUDA backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TrainPioneers/Tensor-Frame"
keywords = ["tensor", "machine-learning", "gpu", "cuda", "wgpu"]
categories = ["science", "mathematics"]
readme = "README.md"

[dependencies]
once_cell = "1.21"
rayon = { version = "1.10", optional = true }

# Optional dependencies for different backends
wgpu = { version = "25.0", optional = true }
bytemuck = { version = "1.19.0", optional = true }
futures = { version = "0.3.31", optional = true }
tokio = { version = "1.45", features = ["rt", "rt-multi-thread"], optional = true }

# CUDA dependencies (optional)
cudarc = { version = "0.11.9", features = ["cuda-version-from-build-system"], optional = true }

[features]
default = ["cpu"]
cpu = ["rayon"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:futures", "dep:tokio"]
cuda = ["dep:cudarc"]
debug = []

[dev-dependencies]
criterion = "0.7"

